--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       # Build the book
       - name: Build the book
         run: |
-          jupyter-book build website
+          jupyter-book build philiphan0109.github.io
 
       # Upload the book's HTML as an artifact
       - name: Upload artifact
