--- a/evidence_bench/_toc.yml
+++ b/evidence_bench/_toc.yml
@@ -6,5 +6,6 @@ root: intro
 chapters:
   - file: links
   - file: evaluation_metrics
+  - file: baseline
   - file: case_study
   - file: model_leaderboard
