--- a/evidence_bench/_toc.yml
+++ b/evidence_bench/_toc.yml
@@ -4,7 +4,7 @@
 format: jb-book
 root: intro
 chapters:
+  - file: dataset
   - file: evaluation_metrics
   - file: baseline
-  - file: case_study
   - file: model_leaderboard
